--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     // Helpers
     // =========================
     const DATE_KEY = () => new Date().toISOString().slice(0,10); // YYYY-MM-DD
-    const DAILY_LIMIT = 22; // 4 plays per day
+    const DAILY_LIMIT = null; // unlimited plays per day // 4 plays per day
 
     const DIFFICULTY = {
       Easy:  { maxGuesses: 7, hardMode: false },
@@ -168,7 +168,7 @@
       }
 
       function startNewGame(auto=false){
-        if (playsUsed >= DAILY_LIMIT){ setLocked(true); setMessage('Daily play limit reached. Come back tomorrow!'); return; }
+        if (DAILY_LIMIT !== null && playsUsed >= DAILY_LIMIT){ setLocked(true); setMessage('Daily play limit reached. Come back tomorrow!'); return; }
         const a = pickRandomAnswer();
         setAnswer(a);
         setRows([]);
@@ -255,7 +255,7 @@
         navigator.clipboard.writeText(out).then(()=>pulse('Result copied!')).catch(()=>pulse('Copy failed'));
       }
 
-      const playsLeft = Math.max(0, DAILY_LIMIT - playsUsed);
+      const playsLeft = DAILY_LIMIT === null ? Infinity : Math.max(0, DAILY_LIMIT - playsUsed);
 
       return (
         <div className="p-6 max-w-3xl mx-auto">
@@ -266,7 +266,7 @@
             </div>
             <div className="flex items-center gap-2">
               <div className="px-3 py-1 rounded border bg-white font-mono">⏱ {fmt(timeLeft)}</div>
-              <div className="px-3 py-1 rounded border bg-white">Plays today: {playsUsed}/{DAILY_LIMIT}</div>
+              {DAILY_LIMIT !== null && (<div className=\"px-3 py-1 rounded border bg-white\">Plays today: {playsUsed}/{DAILY_LIMIT}</div>)}
               <select className="px-2 py-1 border rounded" value={difficulty} onChange={(e)=>setDifficulty(e.target.value)} disabled={rows.length>0}>
                 <option>Easy</option>
                 <option>Medium</option>
@@ -307,7 +307,7 @@
               <ul className="text-sm list-disc pl-5 space-y-1 text-neutral-700">
                 <li><span className="font-medium">Colors:</span> 🟩 correct spot · 🟨 in word, wrong spot · ⬛ not in word</li>
                 <li><span className="font-medium">Guesses:</span> Easy 7 · Medium 3</li>
-                <li><span className="font-medium">Daily limit:</span> 4 plays per browser</li>
+                <li><span className="font-medium">Daily limit:</span> None (unlimited)</li>
                 <li><span className="font-medium">Timer:</span> 10:00 countdown; at 0:00 the round locks</li>
                 <li><span className="font-medium">Refresh:</span> starts a new game and uses one play</li>
                 <li><span className="font-medium">Controls:</span> Type letters, Enter to submit, Backspace to delete; on-screen keyboard works too</li>
@@ -323,12 +323,12 @@
               <div className="text-lg font-semibold mb-1">{rows.some(r=>r.result.every(x=>x==='g'))? 'You solved it! 🎉' : `Game over — word was ${answer}.`}</div>
               <div className="flex gap-2 mt-2">
                 <button className="px-3 py-1 rounded border" onClick={share} disabled={rows.length===0}>Copy Result</button>
-                <button className="px-3 py-1 rounded border" onClick={()=>startNewGame()} disabled={playsLeft<=0}>Play Again ({Math.max(0, DAILY_LIMIT - playsUsed)} left)</button>
+                <button className="px-3 py-1 rounded border" onClick={()=>startNewGame()} disabled={playsLeft<=0}>Play Again</button>
               </div>
             </div>
           )}
 
-          {playsUsed >= DAILY_LIMIT && (
+          {DAILY_LIMIT !== null && playsUsed >= DAILY_LIMIT && (
             <div className="mt-6 p-4 rounded-xl border bg-red-50">
               <div className="text-lg font-semibold">Daily play limit reached</div>
               <div className="text-sm text-neutral-700 mt-1">You can play up to 4 times per day. Come back tomorrow!</div>
@@ -342,4 +342,3 @@
   </script>
 </body>
 </html>
-
