--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Word Guess — 5 letters</title>
+  <title>Word | Created For You | Made With Love </title>
   <style>
     :root{
       --bg:#0f172a; --panel:#111827; --muted:#9ca3af; --text:#e5e7eb;
